Fix problem with extra padding in designer/ListEditor.js dialogs on FireFox

--- a/proddata/css/profoundui.css
+++ b/proddata/css/profoundui.css
@@ -17140,3 +17140,7 @@ fieldset.layout > div[container="true"] {
   position: absolute;
   overflow: hidden;
 }
+
+select.listeditor-listbox option {
+  padding: 0px;
+}
